import { GeneratedType } from "@cosmjs/proto-signing";
import { AcceptedMessagesFilter } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/authz";
import { MsgIBCSendResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/ibc";
import { MsgUnpinCodesResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { MsgMigrateContract } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { MsgSudoContractResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { QueryContractInfoRequest } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { QueryRawContractStateRequest } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { MsgStoreAndInstantiateContractResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { AcceptedMessageKeysFilter } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/authz";
import { InstantiateContractProposal } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/proposal_legacy";
import { MsgInstantiateContract2Response } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { AccessTypeParam } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/types";
import { MsgStoreCodeResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { QueryContractHistoryResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { AllowAllMessagesFilter } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/authz";
import { MsgUpdateParams } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { QueryBuildAddressRequest } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { MsgUpdateAdminResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { Contract } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/genesis";
import { Model } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/types";
import { ClearAdminProposal } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/proposal_legacy";
import { MsgUpdateContractLabel } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { QuerySmartContractStateResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { QueryBuildAddressResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { MaxCallsLimit } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/authz";
import { Code } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/genesis";
import { StoreAndInstantiateContractProposal } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/proposal_legacy";
import { MsgRemoveCodeUploadParamsAddresses } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { QueryAllContractStateResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { InstantiateContract2Proposal } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/proposal_legacy";
import { MigrateContractProposal } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/proposal_legacy";
import { QueryPinnedCodesRequest } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { MsgClearAdminResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { SudoContractProposal } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/proposal_legacy";
import { QueryRawContractStateResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { MsgStoreAndMigrateContractResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { Sequence } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/genesis";
import { MsgInstantiateContract } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { StoreCodeProposal } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/proposal_legacy";
import { MsgInstantiateContract2 } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { CodeGrant } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/authz";
import { QueryContractInfoResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { QueryContractsByCreatorRequest } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { MsgRemoveCodeUploadParamsAddressesResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { MsgUnpinCodes } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { CodeInfo } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/types";
import { UnpinCodesProposal } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/proposal_legacy";
import { MsgStoreAndInstantiateContract } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { MsgAddCodeUploadParamsAddresses } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { MsgUpdateInstantiateConfigResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { MsgUpdateAdmin } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { UpdateAdminProposal } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/proposal_legacy";
import { MsgStoreCode } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { AbsoluteTxPosition } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/types";
import { AccessConfig } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/types";
import { GenesisState } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/genesis";
import { MsgSudoContract } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { QueryAllContractStateRequest } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { MsgInstantiateContractResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { MsgUpdateParamsResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { MsgUpdateInstantiateConfig } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { ExecuteContractProposal } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/proposal_legacy";
import { QueryContractsByCodeResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { QuerySmartContractStateRequest } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { StoreCodeAuthorization } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/authz";
import { QueryCodesResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { QueryContractsByCreatorResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { MsgAddCodeUploadParamsAddressesResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { ContractInfo } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/types";
import { CodeInfoResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { QueryCodesRequest } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { MsgUpdateContractLabelResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { ContractGrant } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/authz";
import { CombinedLimit } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/authz";
import { QueryParamsResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { MsgClearAdmin } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { QueryParamsRequest } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { UpdateInstantiateConfigProposal } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/proposal_legacy";
import { QueryCodeResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { MsgExecuteContractResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { MaxFundsLimit } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/authz";
import { QueryContractsByCodeRequest } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { ContractExecutionAuthorization } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/authz";
import { PinCodesProposal } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/proposal_legacy";
import { MsgIBCCloseChannel } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/ibc";
import { MsgStoreAndMigrateContract } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { QueryContractHistoryRequest } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { MsgMigrateContractResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { MsgPinCodes } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { ContractCodeHistoryEntry } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/types";
import { QueryPinnedCodesResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { MsgIBCSend } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/ibc";
import { MsgPinCodesResponse } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";
import { AccessConfigUpdate } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/proposal_legacy";
import { QueryCodeRequest } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/query";
import { Params } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/types";
import { ContractMigrationAuthorization } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/authz";
import { MsgExecuteContract } from "./types/../../../../../pkg/mod/github.com/!fairblock/wasmd@v0.50.6-fairyring/proto/cosmwasm/wasm/v1/tx";

const msgTypes: Array<[string, GeneratedType]>  = [
    ["/cosmwasm.wasm.v1.AcceptedMessagesFilter", AcceptedMessagesFilter],
    ["/cosmwasm.wasm.v1.MsgIBCSendResponse", MsgIBCSendResponse],
    ["/cosmwasm.wasm.v1.MsgUnpinCodesResponse", MsgUnpinCodesResponse],
    ["/cosmwasm.wasm.v1.MsgMigrateContract", MsgMigrateContract],
    ["/cosmwasm.wasm.v1.MsgSudoContractResponse", MsgSudoContractResponse],
    ["/cosmwasm.wasm.v1.QueryContractInfoRequest", QueryContractInfoRequest],
    ["/cosmwasm.wasm.v1.QueryRawContractStateRequest", QueryRawContractStateRequest],
    ["/cosmwasm.wasm.v1.MsgStoreAndInstantiateContractResponse", MsgStoreAndInstantiateContractResponse],
    ["/cosmwasm.wasm.v1.AcceptedMessageKeysFilter", AcceptedMessageKeysFilter],
    ["/cosmwasm.wasm.v1.InstantiateContractProposal", InstantiateContractProposal],
    ["/cosmwasm.wasm.v1.MsgInstantiateContract2Response", MsgInstantiateContract2Response],
    ["/cosmwasm.wasm.v1.AccessTypeParam", AccessTypeParam],
    ["/cosmwasm.wasm.v1.MsgStoreCodeResponse", MsgStoreCodeResponse],
    ["/cosmwasm.wasm.v1.QueryContractHistoryResponse", QueryContractHistoryResponse],
    ["/cosmwasm.wasm.v1.AllowAllMessagesFilter", AllowAllMessagesFilter],
    ["/cosmwasm.wasm.v1.MsgUpdateParams", MsgUpdateParams],
    ["/cosmwasm.wasm.v1.QueryBuildAddressRequest", QueryBuildAddressRequest],
    ["/cosmwasm.wasm.v1.MsgUpdateAdminResponse", MsgUpdateAdminResponse],
    ["/cosmwasm.wasm.v1.Contract", Contract],
    ["/cosmwasm.wasm.v1.Model", Model],
    ["/cosmwasm.wasm.v1.ClearAdminProposal", ClearAdminProposal],
    ["/cosmwasm.wasm.v1.MsgUpdateContractLabel", MsgUpdateContractLabel],
    ["/cosmwasm.wasm.v1.QuerySmartContractStateResponse", QuerySmartContractStateResponse],
    ["/cosmwasm.wasm.v1.QueryBuildAddressResponse", QueryBuildAddressResponse],
    ["/cosmwasm.wasm.v1.MaxCallsLimit", MaxCallsLimit],
    ["/cosmwasm.wasm.v1.Code", Code],
    ["/cosmwasm.wasm.v1.StoreAndInstantiateContractProposal", StoreAndInstantiateContractProposal],
    ["/cosmwasm.wasm.v1.MsgRemoveCodeUploadParamsAddresses", MsgRemoveCodeUploadParamsAddresses],
    ["/cosmwasm.wasm.v1.QueryAllContractStateResponse", QueryAllContractStateResponse],
    ["/cosmwasm.wasm.v1.InstantiateContract2Proposal", InstantiateContract2Proposal],
    ["/cosmwasm.wasm.v1.MigrateContractProposal", MigrateContractProposal],
    ["/cosmwasm.wasm.v1.QueryPinnedCodesRequest", QueryPinnedCodesRequest],
    ["/cosmwasm.wasm.v1.MsgClearAdminResponse", MsgClearAdminResponse],
    ["/cosmwasm.wasm.v1.SudoContractProposal", SudoContractProposal],
    ["/cosmwasm.wasm.v1.QueryRawContractStateResponse", QueryRawContractStateResponse],
    ["/cosmwasm.wasm.v1.MsgStoreAndMigrateContractResponse", MsgStoreAndMigrateContractResponse],
    ["/cosmwasm.wasm.v1.Sequence", Sequence],
    ["/cosmwasm.wasm.v1.MsgInstantiateContract", MsgInstantiateContract],
    ["/cosmwasm.wasm.v1.StoreCodeProposal", StoreCodeProposal],
    ["/cosmwasm.wasm.v1.MsgInstantiateContract2", MsgInstantiateContract2],
    ["/cosmwasm.wasm.v1.CodeGrant", CodeGrant],
    ["/cosmwasm.wasm.v1.QueryContractInfoResponse", QueryContractInfoResponse],
    ["/cosmwasm.wasm.v1.QueryContractsByCreatorRequest", QueryContractsByCreatorRequest],
    ["/cosmwasm.wasm.v1.MsgRemoveCodeUploadParamsAddressesResponse", MsgRemoveCodeUploadParamsAddressesResponse],
    ["/cosmwasm.wasm.v1.MsgUnpinCodes", MsgUnpinCodes],
    ["/cosmwasm.wasm.v1.CodeInfo", CodeInfo],
    ["/cosmwasm.wasm.v1.UnpinCodesProposal", UnpinCodesProposal],
    ["/cosmwasm.wasm.v1.MsgStoreAndInstantiateContract", MsgStoreAndInstantiateContract],
    ["/cosmwasm.wasm.v1.MsgAddCodeUploadParamsAddresses", MsgAddCodeUploadParamsAddresses],
    ["/cosmwasm.wasm.v1.MsgUpdateInstantiateConfigResponse", MsgUpdateInstantiateConfigResponse],
    ["/cosmwasm.wasm.v1.MsgUpdateAdmin", MsgUpdateAdmin],
    ["/cosmwasm.wasm.v1.UpdateAdminProposal", UpdateAdminProposal],
    ["/cosmwasm.wasm.v1.MsgStoreCode", MsgStoreCode],
    ["/cosmwasm.wasm.v1.AbsoluteTxPosition", AbsoluteTxPosition],
    ["/cosmwasm.wasm.v1.AccessConfig", AccessConfig],
    ["/cosmwasm.wasm.v1.GenesisState", GenesisState],
    ["/cosmwasm.wasm.v1.MsgSudoContract", MsgSudoContract],
    ["/cosmwasm.wasm.v1.QueryAllContractStateRequest", QueryAllContractStateRequest],
    ["/cosmwasm.wasm.v1.MsgInstantiateContractResponse", MsgInstantiateContractResponse],
    ["/cosmwasm.wasm.v1.MsgUpdateParamsResponse", MsgUpdateParamsResponse],
    ["/cosmwasm.wasm.v1.MsgUpdateInstantiateConfig", MsgUpdateInstantiateConfig],
    ["/cosmwasm.wasm.v1.ExecuteContractProposal", ExecuteContractProposal],
    ["/cosmwasm.wasm.v1.QueryContractsByCodeResponse", QueryContractsByCodeResponse],
    ["/cosmwasm.wasm.v1.QuerySmartContractStateRequest", QuerySmartContractStateRequest],
    ["/cosmwasm.wasm.v1.StoreCodeAuthorization", StoreCodeAuthorization],
    ["/cosmwasm.wasm.v1.QueryCodesResponse", QueryCodesResponse],
    ["/cosmwasm.wasm.v1.QueryContractsByCreatorResponse", QueryContractsByCreatorResponse],
    ["/cosmwasm.wasm.v1.MsgAddCodeUploadParamsAddressesResponse", MsgAddCodeUploadParamsAddressesResponse],
    ["/cosmwasm.wasm.v1.ContractInfo", ContractInfo],
    ["/cosmwasm.wasm.v1.CodeInfoResponse", CodeInfoResponse],
    ["/cosmwasm.wasm.v1.QueryCodesRequest", QueryCodesRequest],
    ["/cosmwasm.wasm.v1.MsgUpdateContractLabelResponse", MsgUpdateContractLabelResponse],
    ["/cosmwasm.wasm.v1.ContractGrant", ContractGrant],
    ["/cosmwasm.wasm.v1.CombinedLimit", CombinedLimit],
    ["/cosmwasm.wasm.v1.QueryParamsResponse", QueryParamsResponse],
    ["/cosmwasm.wasm.v1.MsgClearAdmin", MsgClearAdmin],
    ["/cosmwasm.wasm.v1.QueryParamsRequest", QueryParamsRequest],
    ["/cosmwasm.wasm.v1.UpdateInstantiateConfigProposal", UpdateInstantiateConfigProposal],
    ["/cosmwasm.wasm.v1.QueryCodeResponse", QueryCodeResponse],
    ["/cosmwasm.wasm.v1.MsgExecuteContractResponse", MsgExecuteContractResponse],
    ["/cosmwasm.wasm.v1.MaxFundsLimit", MaxFundsLimit],
    ["/cosmwasm.wasm.v1.QueryContractsByCodeRequest", QueryContractsByCodeRequest],
    ["/cosmwasm.wasm.v1.ContractExecutionAuthorization", ContractExecutionAuthorization],
    ["/cosmwasm.wasm.v1.PinCodesProposal", PinCodesProposal],
    ["/cosmwasm.wasm.v1.MsgIBCCloseChannel", MsgIBCCloseChannel],
    ["/cosmwasm.wasm.v1.MsgStoreAndMigrateContract", MsgStoreAndMigrateContract],
    ["/cosmwasm.wasm.v1.QueryContractHistoryRequest", QueryContractHistoryRequest],
    ["/cosmwasm.wasm.v1.MsgMigrateContractResponse", MsgMigrateContractResponse],
    ["/cosmwasm.wasm.v1.MsgPinCodes", MsgPinCodes],
    ["/cosmwasm.wasm.v1.ContractCodeHistoryEntry", ContractCodeHistoryEntry],
    ["/cosmwasm.wasm.v1.QueryPinnedCodesResponse", QueryPinnedCodesResponse],
    ["/cosmwasm.wasm.v1.MsgIBCSend", MsgIBCSend],
    ["/cosmwasm.wasm.v1.MsgPinCodesResponse", MsgPinCodesResponse],
    ["/cosmwasm.wasm.v1.AccessConfigUpdate", AccessConfigUpdate],
    ["/cosmwasm.wasm.v1.QueryCodeRequest", QueryCodeRequest],
    ["/cosmwasm.wasm.v1.Params", Params],
    ["/cosmwasm.wasm.v1.ContractMigrationAuthorization", ContractMigrationAuthorization],
    ["/cosmwasm.wasm.v1.MsgExecuteContract", MsgExecuteContract],
    
];

export { msgTypes }